--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -21,7 +21,7 @@
       <p class="mb-3">{{user?.mediumPrice}}</p>
       }
       @else {
-      <p class="mb-3">{{user?.Large}}</p>
+      <p class="mb-3">{{user?.largePrice}}</p>
       } 
     </button>
     <!-- Card Buttons -->
