--- a/src/app/Products-CRUD-FILTER/add-product/add-product.component.html
+++ b/src/app/Products-CRUD-FILTER/add-product/add-product.component.html
@@ -2,6 +2,8 @@
   <div class="container-fluid h-100 mt-5 p-0">
     <div class="overlay w-100 h-100 pt-5">
 <!-- ********* -->
+<a class="dropdown-item text-start mx-4 mt-3 " routerLink="/admin"><i class="fa-solid fa-less-than fa-2xl" style="color: white;"></i></a>
+
 <form (ngSubmit)="Add()" class="col-lg-6 mx-lg-auto col-md-10 col-sm-11 p-4 rounded-5 text-light fs-4" [formGroup]="addProductForm">
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Name</label>
@@ -18,10 +20,26 @@
     <input type="text" class="form-control" formControlName="Sizes">
   </div>
 
-  <div class="mb-3">
+  <!-- <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Price</label>
-    <input type="text" class="form-control"  formControlName="Price">
+    <input type="text" class="form-control"  formControlName="price">
+  </div> -->
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Small Price</label>
+    <input type="text" class="form-control"  formControlName="smallPrice">
   </div>
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Medium Price</label>
+    <input type="text" class="form-control"  formControlName="mediumPrice">
+  </div>
+
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Large Price</label>
+    <input type="text" class="form-control"  formControlName="largePrice">
+  </div>
+
 
   <div class="mb-3">
     <input type="file" class="form-control w-50 mx-lg-auto mt-4" formControlName="Image">
