--- a/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
+++ b/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
@@ -1,108 +1,112 @@
 
-<div class="container">
-<div class="col-12 d-flex">
+<div class="main">
+  <div class="container">
 
-  <div class="col-3">
-    <p>CRUD Operation + Filter</p>
-    <button class="btn btn-primary" routerLink="/pizza/addpizza">Add Item</button>
-    <!-- Filter DropDown -->
-    <div class="dropdown" style="margin-top: 20px;">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Sort
-      </button>
-      <ul class="dropdown-menu text-center">
-
-        <li><button class="dropdown-item" (click)="sortId()">Default</button></li>
-
-        <li><button class="dropdown-item" (click)="sortHToL()">Price High-Low</button></li>
-
-        <li><button class="dropdown-item" (click)="sortLToH()">Price Low-High</button></li>
-
-      </ul>
-    </div>
-
-    <div class="dropdown" style="margin-top: 20px;">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Size
-      </button>
-      <ul class="dropdown-menu text-center">
-
-        <li><button class="dropdown-item" (click)="Default()">Default</button></li>
-
-        <li><button class="dropdown-item" (click)="Large()">Large</button></li>
-
-        <li><button class="dropdown-item" (click)="Medium()">Medium</button></li>
-
-        <li><button class="dropdown-item" (click)="Small()">Small</button></li>
-
-      </ul>
-    </div>
-
-  </div>
-
-
-  <div class="col-8">
-    <table class="table table-striped text-center">
-      <thead class="table-dark">
-        <tr class="fs-3">
-          <th scope="col">Id</th>
-          <th scope="col">Name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Actions</th>
-        </tr>
-      </thead>
-      <tbody class="fs-5 ">
-        @for (prd of pizza; track prd.id) {
-        <tr class="text-center">
-          <td>{{prd.id}}</td>
-          <td>{{prd.Name}}</td>
-          <td>{{prd.price | currency:'EGP '}}</td>
-          <td>
-            <div class="dropdown">
-              <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Action
-              </button>
-              <ul class="dropdown-menu text-center">
-                <!-- <<<<<<< Details >>>>>>> -->
-                <li><a class="dropdown-item" routerLink="/admin/ProductDetails/{{prd.id}}"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
-                  fill="green" class="bi bi-eye-fill" viewBox="0 0 16 16">
-                  <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
-                  <path
-                    d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
-                </svg></a></li>
+    <div class="row py-4">
+        <!-- Filter DropDown -->
+        <div class="col-6">
+          <button class="btn add" routerLink="/pizza/addpizza"><span><i class="fa-solid fa-plus fa-2xs"></i>
+          </span> Add Item</button>
+        </div>
     
-                <!-- <<<<<<< Update >>>>>>> -->
-                <li><a class="dropdown-item" routerLink="/pizza/updatepizza/{{prd.id}}"><svg xmlns="http://www.w3.org/2000/svg"
-                      width="25" height="25" fill="black" class="bi bi-pencil-square"
-                      viewBox="0 0 16 16">
+        <div class="col-6 row text-end justify-content-end">
+          <div class="dropdown col-3">
+            <button class="btn add3 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Sort
+            </button>
+            <ul class="dropdown-menu text-center">
+      
+              <li><button class="dropdown-item" (click)="sortId()">Default</button></li>
+      
+              <li><button class="dropdown-item" (click)="sortHToL()">Price High-Low</button></li>
+      
+              <li><button class="dropdown-item" (click)="sortLToH()">Price Low-High</button></li>
+      
+            </ul>
+          </div>
+      
+          <div class="dropdown col-3">
+            <button class="btn add3 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Size
+            </button>
+            <ul class="dropdown-menu text-center">
+      
+              <li><button class="dropdown-item" (click)="Default()">Default</button></li>
+      
+              <li><button class="dropdown-item" (click)="Large()">Large</button></li>
+      
+              <li><button class="dropdown-item" (click)="Medium()">Medium</button></li>
+      
+              <li><button class="dropdown-item" (click)="Small()">Small</button></li>
+      
+            </ul>
+          </div>
+      
+        </div>
+    </div>
+    
+      <div>
+        <table class="table table-striped text-center">
+          <thead>
+            <tr class="fs-3">
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col">Price</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody class="fs-5 ">
+            @for (prd of pizza; track prd.id) {
+            <tr class="text-center">
+              <td>{{prd.id}}</td>
+              <td>{{prd.Name}}</td>
+              <td>{{prd.price | currency:'EGP '}}</td>
+              <td>
+                <div class="dropdown">
+                  <button class="btn dropdown-toggle add2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Action
+                  </button>
+                  <ul class="dropdown-menu text-center">
+                    
+                    <!-- <<<<<<< Details >>>>>>> -->
+                    <li><a class="dropdown-item" routerLink="/admin/ProductDetails/{{prd.id}}"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                      fill="green" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                      <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0" />
                       <path
-                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                      <path fill-rule="evenodd"
-                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                        d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7" />
                     </svg></a></li>
+        
+                    <!-- <<<<<<< Update >>>>>>> -->
+                    <li><a class="dropdown-item" routerLink="/pizza/updatepizza/{{prd.id}}"><svg xmlns="http://www.w3.org/2000/svg"
+                          width="25" height="25" fill="black" class="bi bi-pencil-square"
+                          viewBox="0 0 16 16">
+                          <path
+                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                          <path fill-rule="evenodd"
+                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                        </svg></a></li>
+        
+                    <!-- <<<<<<< Delete >>>>>>> -->
+                    <li>
+                        <button routerLink="/admin" class="dropdown-item" (click)="DeletePizza(prd.id)"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="25" height="25" fill="red" class="bi bi-trash3-fill"
+                            viewBox="0 0 16 16">
+                            <path
+                              d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                          </svg></button>
+                    </li>
+        
+                  </ul>
+                </div>
+    
+              </td>
+            </tr>
+            }
+    
+          </tbody>
+        </table>
+      </div>
     
     
-                <!-- <<<<<<< Delete >>>>>>> -->
-                <li>
-                    <button class="dropdown-item" (click)="DeletePizza(prd.id)"><svg xmlns="http://www.w3.org/2000/svg"
-                        width="25" height="25" fill="red" class="bi bi-trash3-fill"
-                        viewBox="0 0 16 16">
-                        <path
-                          d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
-                      </svg></button>
-                </li>
-    
-              </ul>
-            </div>
-
-          </td>
-        </tr>
-        }
-
-      </tbody>
-    </table>
-  </div>
-
-
-</div>
+    </div>
 </div>
