--- a/src/app/Products-CRUD-FILTER/update-product/update-product.component.html
+++ b/src/app/Products-CRUD-FILTER/update-product/update-product.component.html
@@ -47,8 +47,11 @@
   <div class="overlay w-100 h-100 pt-5">
     <!-- <h3></h3> -->
     <!-- ********* -->
+    <a class="dropdown-item text-start mx-4 mt-3 " routerLink="/admin"><i class="fa-solid fa-less-than fa-2xl" style="color: white;"></i></a>
+
     <form [formGroup]="productForm" (ngSubmit)="update(Image.value)" class="col-lg-6 mx-lg-auto col-md-10 col-sm-11 p-4 rounded-5 text-light fs-4">
-        <div class="mb-3">
+        
+      <div class="mb-3">
           <label class="form-label">Name</label>
           <input type="text" class="form-control"  formControlName="Name">
         </div>
@@ -64,9 +67,24 @@
           <input type="text" class="form-control" formControlName="Sizes">
         </div>
 
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label class="form-label">Price</label>
           <input type="text" class="form-control" formControlName="price">
+        </div> -->
+
+        <div class="mb-3">
+          <label class="form-label">Small Price</label>
+          <input type="text" class="form-control" formControlName="smallPrice">
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Medium Price</label>
+          <input type="text" class="form-control" formControlName="mediumPrice">
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Large Price</label>
+          <input type="text" class="form-control" formControlName="largePrice">
         </div>
 
         <div class="mb-3">
