--- a/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
+++ b/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
@@ -88,7 +88,7 @@
         
                     <!-- <<<<<<< Delete >>>>>>> -->
                     <li>
-                        <button routerLink="/admin" class="dropdown-item" (click)="DeletePizza(prd.id)"><svg xmlns="http://www.w3.org/2000/svg"
+                        <button class="dropdown-item" (click)="DeletePizza(prd.id)"><svg xmlns="http://www.w3.org/2000/svg"
                             width="25" height="25" fill="red" class="bi bi-trash3-fill"
                             viewBox="0 0 16 16">
                             <path
