--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -28,7 +28,7 @@
     <!-- Card Buttons -->
     <div class="d-flex justify-content-around">
       <div><button class="btn btn-danger" (click)="Decreament()"><i class="fa-solid fa-trash-can"></i></button></div>
-      <p class="fs-4">{{itemQuantity}}</p>
+      <p class="fs-4">{{user.quantity}}</p>
       <div><button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button></div>
     </div>
   </div>
