--- a/src/app/Components/my_cart/my-cart.component.html
+++ b/src/app/Components/my_cart/my-cart.component.html
@@ -22,6 +22,7 @@
                   </div>
                 </div>
                 <p style="margin-bottom: 10px; margin-left: 2px;font-size: medium;"><strong>Size:</strong> {{item.size}}</p>
+                <p>{{item.price}}</p>
                 <div>
                   <div class="col-md-6" >
                     <button type="button" (click)="customizeItem(item.id)" class="btn btn-success btn-custom demo" style="font-size: medium;"
