--- a/src/app/Components/small-cart/small-cart.component.html
+++ b/src/app/Components/small-cart/small-cart.component.html
@@ -2,7 +2,7 @@
 <div class="cart-container">
   <div class="cart-card" *ngIf="isEmpty()">
       <!-- Cart is empty -->
-      <img class="circular-image" src="assets\Images\cartEmpty.png" alt="Empty Cart" />
+      <img class="circular-image w-100 h-50 " src="assets\Images\cartEmpty.png" alt="Empty Cart" />
       <h3 style="font-weight: bolder; color: #8A9091;" class="text-center mt-1">Your cart is empty.</h3>
       <h5 style="font-weight:normal ; color: #BBC1CD;" class="text-center">Please add some item from the menu to place an order.</h5>
     </div>
