--- a/src/app/Components/deals/deals.component.html
+++ b/src/app/Components/deals/deals.component.html
@@ -7,7 +7,7 @@
                 <h2>EXCLUSIVE DEALS</h2>
             </div>
             <div class="col-4 text-end viewAll-1">
-                <a class="viewAll" routerLink="/pizza">View ALL
+                <a class="viewAll" routerLink="/deals">View ALL
                    <div class="d-inline icon">
                     <i class="fa-solid fa-greater-than fa-xs"></i>
                    </div>
@@ -16,9 +16,21 @@
         </div>
         <!-- --------------------Ahmed----------------------------------->
         <div class="row py-3">
-            <div class="col-3">
-                <app-product-card [user]="oneproduct"></app-product-card>
-            </div>
+            <div class="row">
+                <div class="mycard mx-4 my-md-3 card col-lg-3 col-md-5 col-8 my-3">
+                    <div class="parent text-center">  <!-- Added text-center -->
+                      <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
+                        <div>
+                          <div class="d-flex justify-content-start align-items-end h-100">
+                          </div>
+                        </div>
+                    </div>
+                    <div class="card-body text-center">
+                        <h3 class="card-title mb-3 text-reset"><b>Chicken BBQ</b></h3>
+                        <p class="text-reset">Grilled Chicken & Onions Loaded On BBQ Base</p>
+                      <h5>Medium | Pan</h5>
+                    </div>
+                  </div>
         </div>
     </div>
 </div>
