--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -3,7 +3,7 @@
     <img src="{{user?.Image}}" class="w-75 child" />
     <div>
       <div class="d-flex justify-content-start align-items-end h-100">
-        <h5><span class="badge bg-primary ms-2">New</span></h5>
+        <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
       </div>
     </div>
   </div>
