--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -27,20 +27,13 @@
                       <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
-                            <h5><span class="badge bg-primary ms-2">New</span></h5>
                           </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title mb-3 text-reset">Chicken BBQ</h5>
+                    <div class="card-body text-center">
+                        <h3 class="card-title mb-3 text-reset"><b>Chicken BBQ</b></h3>
                         <p class="text-reset">Grilled Chicken & Onions Loaded On BBQ Base</p>
                       <h5>Medium | Pan</h5>
-                      <h6 class="mb-3">EGP 154.99</h6>
-                      <div class="d-flex justify-content-around">
-                        <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
-                        <p class="fs-4">5</p>
-                        <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
-                      </div>
                     </div>
                   </div>
                
@@ -60,20 +53,20 @@
                       <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75 child" />
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
-                            <h5><span class="badge bg-primary ms-2">New</span></h5>
+                            <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
                           </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title mb-3 text-reset">Chicken Supreme</h5>
+                    <div class="card-body text-center ">
+                        <h3 class="card-title mb-3 text-reset"><b>Chicken Supreme</b></h3>
                         <p class="text-reset">The ultimate mix of Chicken together with Mus</p>
                       <h5>Small | Pan</h5>
-                      <h6 class="mb-3">EGP 121.00</h6>
+                      <!-- <h6 class="mb-3">EGP 121.00</h6>
                       <div class="d-flex justify-content-around">
                         <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
                         <p class="fs-4">5</p>
                         <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                
@@ -84,20 +77,20 @@
                       <img src="assets\Images\Pizza\Original Chicken.png" class="w-75 child" />
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
-                            <h5><span class="badge bg-primary ms-2">New</span></h5>
+                            <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
                           </div>
                         </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title mb-3 text-reset">Original Chicken</h5>
+                    <div class="card-body text-center">
+                        <h3 class="card-title mb-3 text-reset"><b>Original Chicken</b></h3>
                         <p class="text-reset">Ranch base sauce with grilled chicken, mushro</p>
                       <h5>Medium | Pan</h5>
-                      <h6 class="mb-3">EGP 195.00</h6>
+                      <!-- <h6 class="mb-3">EGP 195.00</h6>
                       <div class="d-flex justify-content-around">
                         <div><button class="btn btn-danger"><i class="fa-solid fa-trash-can"></i></button></div>
                         <p class="fs-4">5</p>
                         <div><button class="btn btn-success"><i class="fa-solid fa-plus"></i></button></div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                
