--- a/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
+++ b/src/app/Products-CRUD-FILTER/product-crud/product-crud.component.html
@@ -72,9 +72,9 @@
                   </button>
                   <ul class="dropdown-menu text-center">
                     <li><button class="dropdown-item" (click)="setDiscountedSize($event,prd.id)">Default</button></li>
-            @if(prd.largePrice){<li><button class="dropdown-item" id="{{prd.id}}" name="largePrice" (click)="setDiscountedSize($event,prd.id)">Large</button></li>}
-            @if(prd.mediumPrice){<li><button class="dropdown-item" id="{{prd.id}}" name="mediumPrice" (click)="setDiscountedSize($event,prd.id)">Medium</button></li>}
-            @if(prd.smallPrice){<li><button class="dropdown-item" id="{{prd.id}}" name="smallPrice" (click)="setDiscountedSize($event,prd.id)">Small</button></li>}
+            @if(prd.largePrice){<li><button class="dropdown-item" id="{{prd.id}}" name="deallargePrice" (click)="setDiscountedSize($event,prd.id)">Large</button></li>}
+            @if(prd.mediumPrice){<li><button class="dropdown-item" id="{{prd.id}}" name="dealmediumPrice" (click)="setDiscountedSize($event,prd.id)">Medium</button></li>}
+            @if(prd.smallPrice){<li><button class="dropdown-item" id="{{prd.id}}" name="dealsmallPrice" (click)="setDiscountedSize($event,prd.id)">Small</button></li>}
                   </ul>
                 </div>
                 <input [(ngModel)]="DiscountedPrice" style="display: none;" id="DiscountInput+{{prd.id}}" (change)="setDiscountedPrice(prd.id)" type="text" class="mt-2 border-0 rounded-2 p-1 w-100">
