--- a/src/app/Components/onestarter/onestarter.component.css
+++ b/src/app/Components/onestarter/onestarter.component.css
@@ -1,3 +1,18 @@
+/* @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
+  .fade-in {
+    animation: fadeIn 0.3s ease-out;
+  } */
+
+
+
 .mycard{
     border: none;
     box-shadow: -3px 4px 5px rgba(0, 0, 0, 0.45);
@@ -17,3 +32,46 @@ transition: all 1.1s;
     background-color: transparent;
     border: none;
 }
+
+/* .inline-snackbar {  
+     position: fixed;   
+     bottom: 0;   
+     left: 50%;   
+     overflow: hidden; 
+     background-color: transparent;
+    } */
+
+    /* .modal.fade .modal-dialog {
+        transition: transform 0.3s ease-out;
+    } */
+
+.snackbar{
+    background-color: rgba(0, 0, 0, 0.525);
+    color: white;
+    transition: transform 0.3s ease-out;
+    font-size: 20px;
+}
+
+    .button{
+        background-color: #198754;
+        color: white !important;
+    }
+
+    .button:hover{
+        background-color: #157347;
+    }
+
+    /* .mat-mdc-snack-bar-container {
+        &.inline-snackbar {
+          --mdc-snackbar-container-color: transparent;
+        }
+      } */
+
+    /* .mat-mdc-focus-indicator{
+        background-color: black;
+    } */
+
+
+    /* .mdc-button--outlined{
+        background-color: black;
+    } */
