--- a/src/app/Components/deals/deals.component.html
+++ b/src/app/Components/deals/deals.component.html
@@ -17,18 +17,21 @@
         <!-- --------------------Ahmed----------------------------------->
         <div class="row py-3">
             <div class="row">
-                <div class="mycard mx-4 my-md-3 card col-lg-3 col-md-5 col-8 my-3">
-                    <div class="parent text-center">  <!-- Added text-center -->
-                      <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
+                <div class="mycard mx-4 my-md-3 card col-lg-3 col-md-5 col-8 my-3 child">
+                    <div class="text-center">  <!-- Added text-center -->
+                      <div class="overflow-hidden ">
+                        <img src="../../../assets/Images/Pizza/Original Chicken.png" class="w-75 " />
+                      </div>
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
+                            <h5><span class="badge bg-danger ms-2 w-100 py-1 ">New</span></h5>
                           </div>
                         </div>
                     </div>
                     <div class="card-body text-center">
-                        <h3 class="card-title mb-3 text-reset"><b>Chicken BBQ</b></h3>
-                        <p class="text-reset">Grilled Chicken & Onions Loaded On BBQ Base</p>
-                      <h5>Medium | Pan</h5>
+                        <h3 class="card-title mb-3 text-reset"><b>Original Chicken Ranch</b></h3>
+                        <p class="text-reset">Ranch base sauce with grilled chicken, mushro</p>
+                      <h5>Small Size</h5>
                     </div>
                   </div>
         </div>
