--- a/src/app/Components/download/download.component.html
+++ b/src/app/Components/download/download.component.html
@@ -1,6 +1,6 @@
 <div class="finalSection ">
-
-    <!-- Logo -->
+    <div class="container ">
+          <!-- Logo -->
     <div class="pizzaHutLogo">
         <img class="logoimg" src="../../../assets/Images/Pizza-logo-design-template-Vector-PNG.png" alt="Pizza Hut Logo">
     </div>
@@ -21,6 +21,7 @@
                 <img src="../../../assets/Images/ios-store-icon.png" alt="Download Pizza Hut With ios">
             </a>
         </div>
+    </div>
     </div>
 </div>
 
