--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -29,16 +29,16 @@
         <a class="a-tags" routerLink="/home" routerLinkActive="selected">Home</a>
       </div>
       <div class="ion-text-center single-menu-item melts">
-        <a class="a-tags">Melts</a>
+        <a routerLink="/pizza" class="a-tags">Pizza</a>
       </div>
       <div class="ion-text-center single-menu-item deals">
         <a routerLink="/deals" class="a-tags">Deals</a>
       </div>
       <div class="ion-text-center single-menu-item pizza">
-        <a routerLink="/pizza" class="a-tags" routerLinkActive="selected">Pizza</a>
+        <a routerLink="/starters" class="a-tags" routerLinkActive="selected">Starters</a>
       </div>
       <div class="ion-text-center single-menu-item starters">
-        <a class="a-tags" routerLink="/starters">Starters</a>
+        <a class="a-tags" routerLink="/profile">Profile</a>
       </div>
     <div class="dropdown">
         <!-- <div class="ion-text-center single-menu-item more-option"> 
