--- a/src/app/Components/deals-cart/deals-cart.component.css
+++ b/src/app/Components/deals-cart/deals-cart.component.css
@@ -3,21 +3,17 @@
     box-shadow: -3px 4px 5px rgba(0, 0, 0, 0.45);
 }
 
-.child
+/* .child
 {
 transition: all 1.1s;
 }
-.parent:hover .child
+.child:hover
 {
-    transform: scale(1.2);
-}
+    transform: scale(1.1);
+} */
 
 
 .model-btn{
     background-color: transparent;
     border: none;
-}
-
-.delet{
-    color: red;
 }
