--- a/src/app/Components/onestarter/onestarter.component.css
+++ b/src/app/Components/onestarter/onestarter.component.css
@@ -11,21 +11,28 @@
     animation: fadeIn 0.3s ease-out;
   } */
 
-
+  /* .child
+  {
+  transition: all 1.1s;
+  }
+  .child:hover
+  {
+      transform: scale(1.1);
+  } */
 
 .mycard{
     border: none;
     box-shadow: -3px 4px 5px rgba(0, 0, 0, 0.45);
 }
 
-.child
+/* .child
 {
 transition: all 1.1s;
 }
-.parent:hover .child
+.child:hover
 {
-    transform: scale(1.2);
-}
+    transform: scale(1.1);
+} */
 
 
 .model-btn{
@@ -45,11 +52,12 @@ transition: all 1.1s;
         transition: transform 0.3s ease-out;
     } */
 
-.snackbar{
-    background-color: rgba(0, 0, 0, 0.525);
-    color: white;
-    transition: transform 0.3s ease-out;
+.snackbarbody{
+    /* background-color: rgba(0, 0, 0, 0.525); */
+    color: black;
+    /* transition: transform 0.3s ease-out; */
     font-size: 20px;
+    width: 120px;
 }
 
     .button{
