--- a/src/app/Components/pizza-pgae/pizza-pgae.component.css
+++ b/src/app/Components/pizza-pgae/pizza-pgae.component.css
@@ -82,7 +82,7 @@ body{
   padding: 15px;
   /* border: 3px solid #393838; */
   border-radius: 15px;
-  background-color: #19283f;
+  background-color: #393838;
   box-shadow: -3px 4px 5px rgba(0, 0, 0, 0.45);
 }
 
