--- a/src/app/Components/product-card/product-card.component.html
+++ b/src/app/Components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
-<div class="mycard card">
+<div class="mycard card child mb-4 ">
   <div class="parent text-center"> <!-- Added text-center -->
-    <img src="{{user?.Image}}" class="w-75 child" />
+    <img src="{{user?.Image}}" class="w-75" />
     <div>
       <div class="d-flex justify-content-start align-items-end h-100">
         <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
@@ -29,7 +29,25 @@
     <div class="d-flex justify-content-around">
       <div><button class="btn btn-danger" (click)="Decreament()"><i class="fa-solid fa-trash-can"></i></button></div>
       <p class="fs-4">{{user.quantity}}</p>
-      <div><button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button></div>
+      <div>
+        <!-- <button class="btn btn-success" (click)="Increament()"><i class="fa-solid fa-plus"></i></button> -->
+
+        <button (click)="Increament()" type="button " class="btn button btn-success" id="liveToastBtn"> <i class="fa-solid fa-plus"></i></button> 
+
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <!-- <div class="toast-header"> 
+        <img src="..." class="rounded me-2" alt="...">
+        <strong class="me-auto">Bootstrap</strong> 
+        <small>11 mins ago</small> 
+         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div> -->
+        <div class="toast-body">
+         Add to cart 🍕
+        </div>
+        </div>
+        </div>
+    </div>
     </div>
   </div>
 </div>
