--- a/src/app/Components/products/products.component.css
+++ b/src/app/Components/products/products.component.css
@@ -59,9 +59,9 @@ h2{
 {
 transition: all 1.1s;
 }
-.parent:hover .child
+.child:hover
 {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 
