--- a/src/app/Components/products/products.component.html
+++ b/src/app/Components/products/products.component.html
@@ -22,9 +22,11 @@
         <!-- --------------------Ahmed--------------------------------- -->
         <div class="coponents my-3 mx-3 py-5">
             <div class="row justify-content-between ">
-                <div class="mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3">
+                <div class="mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3 child">
                     <div class="parent text-center">  <!-- Added text-center -->
-                      <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75 child" />
+                      <div class="overflow-hidden p-4">
+                        <img src="assets\Images\Pizza\Chicken BBQ.png" class="w-75" />
+                      </div>
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
                           </div>
@@ -48,9 +50,11 @@
  
                 <!--  -->
  
-                <div class=" mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3">
+                <div class=" mycard m-auto my-md-3 card col-lg-3 col-md-5 col-8 my-3 child">
                     <div class="parent text-center">  <!-- Added text-center -->
-                      <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75 child" />
+                      <div class="overflow-hidden p-4">
+                        <img src="assets\Images\Pizza\Chicken Supreme.png" class="w-75" />
+                      </div>
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
                             <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
@@ -71,10 +75,11 @@
                   </div>
                
                   <!--  -->
- 
-                  <div class="mycard m-auto  my-md-3 card col-lg-3 col-md-5 col-8 my-3 ">
+                  <div class="mycard m-auto  my-md-3 card col-lg-3 col-md-5 col-8 my-3 child">
                     <div class="parent text-center">  <!-- Added text-center -->
-                      <img src="assets\Images\Pizza\Original Chicken.png" class="w-75 child" />
+                      <div class="overflow-hidden p-4">
+                        <img src="assets\Images\Pizza\Original Chicken.png" class="w-75" />
+                      </div>
                         <div>
                           <div class="d-flex justify-content-start align-items-end h-100">
                             <!-- <h5><span class="badge bg-primary ms-2">New</span></h5> -->
